--- a/po/zh_CN/k3b.po
+++ b/po/zh_CN/k3b.po
@@ -10370,10 +10370,16 @@ msgstr "麒麟刻录"
 msgid "Data Burner"
 msgstr "数据刻录"
 
+msgid "Data Burner  "
+msgstr "数据刻录"
+
 msgid "Image Burner"
 msgstr "镜像刻录"
 
 msgid "Copy Disk"
+msgstr "复制光盘"
+
+msgid "Copy Disk       "
 msgstr "复制光盘"
 
 #: src//misc/k3bmediaformattingdialog.cpp
