--- a/debian/changelog
+++ b/debian/changelog
@@ -1,30 +1,16 @@
-kylin-burner (3.1.0-1kylin1k2) v101; urgency=medium
+kylin-burner (3.1.0-1) unstable; urgency=medium
 
-  * 修正部分bug，比如调整关闭按钮尺寸等；
-  * 新增部分深色主题界面；
-  * 新增按下F1时调用系统帮助手册（目前DBus调用失败，会提示失败信息。
+  * New upstream release.
 
- -- Derek-Wong <wangye@kylinos.cn>  Fri, 09 Oct 2020 15:00:55 +0800
+ -- handsome_feng <jianfengli@ubuntukylin.com>  Tue, 22 Dec 2020 13:05:40 +0000
 
-kylin-burner (3.1.0-1kylin1k1) v101; urgency=medium
+kylin-burner (3.0.8-1) unstable; urgency=medium
 
-  * fix: bug20499. 任务栏图标为中尺寸和大尺寸时，最小化到任务栏图标过小。
-  * fix: bug20475. 占用cpu为100%，而且点击关闭时很卡。
+  * New upstream release. (Closes: #957412)
+  * debian/rules: delete as-needed.
+  * debian/control: bump standards-version to 4.5.0.
 
- -- Bi Wenjie <biwenjie@kylinos.cn>  Wed, 30 Sep 2020 16:31:08 +0800
-
-kylin-burner (3.1.0-1kylin1) v101; urgency=medium
-
-  * Rebuild for v10.1
-
- -- Bi Wenjie <biwenjie@kylinos.cn>  Thu, 24 Sep 2020 18:02:43 +0800
-
-kylin-burner (3.1.0-1ubuntu1.1) unstable; urgency=medium
-
-  * Non-maintainer upload.
-  * change core,turn to new which forked from k3b
-
- -- Derek Wong <wangye@kylinos.cn>  Thu, 24 Sep 2020 17:03:25 +0800
+ -- handsome_feng <jianfengli@ubuntukylin.com>  Sat, 01 Aug 2020 02:53:17 +0000
 
 kylin-burner (3.0.7-1ubuntu1) focal; urgency=low
 
